 	- const'ify MIN/MAX/... macros;
 	- add CONST_MAX() macro;
 	- don't use "debug" from kernel cmdline to set log level in non-PID 1;
 	- try to be a bit more nfs compatible when checking whether an fs is writable;
 	- try to use the existing 64bit hash functions for dev_t if it is 64bit;
 	- remove unused FOREACH_WORD_SEPARATOR_QUOTED;
 	- remove generator module;
 * virt:
 	- rework container detection logic;
 	- detect s390 virtualization;
 * tmpfiles:
 	- remove unused /run/systemd/ask-password directory;
 	- change return type to void in help function;
 	- only execute chmod()/chown() when needed;
 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 	- update systemd-analyze page;
 	- remove repeating words;
 	- fix path for system-sleep hook directory;
 	- correct references to DefaultTimeout*Sec;
 	- document that we look for both the instance's and
 	  the template's .d/ directory when looking for unit file drop-ins;
 	- improve documentation for StandardOutput= and StandardInput=;
 	- drop references to removed and obsolete 'systemctl load' command;
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 	- add test which shows access to random memory to test-strv;
 	- use fabs on doubles in test-util;
 	- move test-device-nodes test to separate module udev;
 	- fix strtod test for real in test-util;
 	- remove test-bus-memfd test;
 	- remove test-bus-zero-copy test;
 	- add tests to test-socket-util;
 	- add missing unlink in test-async;
 	- add tests to test-fileio;