@@ -552,8 +552,6 @@ libsystemd_shared_la_SOURCES = \
 	src/shared/refcnt.h \
 	src/shared/udev-util.h \
 	src/shared/bus-errors.h \
-	src/shared/device-nodes.c \
-	src/shared/device-nodes.h \
 	src/shared/util.c \
 	src/shared/util.h \
 	src/shared/virt.c \
